2005-03-02  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-02-27  Roman Kennke  <roman@ontographics.com>

        * javax/swing/plaf/basic/BasicListUI:
        fixed modifiers of several fields, methods and inner
        classes to match the 'spec'.
        (getMaximumSize): removed. It's not in the spec and the
        implementations was superfluous.

2005-03-02  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-02-27  Chris Burdess  <dog@gnu.org>

        * gnu/xml/aelfred2/JAXPFactory.java,
          gnu/xml/aelfred2/SAXDriver.java,
          gnu/xml/aelfred2/XmlParser.java,
          gnu/xml/aelfred2/XmlReader.java: Applied GNU Classpath source code
        formatting conventions. Replaced arrays of Object with struct-like
        classes for easier maintainability. Made SAXDriver.stringInterning
        package private to allow access from XmlParser inside the loop without
        a method call overhead.

2005-03-02  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-02-27  Roman Kennke  <roman@ontographics.com>

        * javax/swing/plaf/basic/BasicListUI:
        make BasicListUI capable of wrapping lists
        (layoutOrientation property of javax.swing.JList)

2005-03-02  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-02-26  Audrius Meskauskas  <audriusa@bluewin.ch>

        * javax/swing/Timer.java: documenting and some
          formatting.

2005-03-02  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-02-26  Audrius Meskauskas  <audriusa@bluewin.ch>

        * javax/swing/JTextArea.java (replaceRange):
        Fixing doc.remove(start, length) misinterpretation.

2005-03-02  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-02-26  Roman Kennke  <roman@ontographics.com>

        * javax/swing/plaf/basic/BasicListUI
        (updateLayoutState,paint): make BasicListUI aware of the